[package]
name = "introspectable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["specialized_std"]

# This feature enables the use of specialized TypeInfo variants for specific standard library types such as Vec, Box, and more.
specialized_std = []