[package]
name = "introspectable"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["introspection", "introspectable"]
description = "Basic introspection via the Introspectable trait."
readme = "README.md"
homepage = "https://github.com/peperworx/introspectable"
repository = "https://github.com/peperworx/introspectable"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[features]
default = ["specialized_std"]

# This feature enables the use of specialized TypeInfo variants for specific standard library types such as Vec, Box, and more.
specialized_std = []